# streamlit-stonks

./: .giltab-ci.yml  .gitignore  1_Stock_Summary.py  Dockerfile  README.md  clean.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  run_scraper.sh  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
backend/service/: framework.py  macd.py
cdk/: README.md  app.py  requirements-cdk.txt  setup.py
cdk/stacks/: ecr.py  stock_analysis.py  streamlit_service_stack.py
