[project]
name = "stock-informer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "fastparquet>=2024.11.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.1",
    "ruff>=0.11.2",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.55",
]
